css/styles.css
/* Import font icons */
@font-face {
    font-family: "brands";
    src: url("../fonts/fa-brands-400.eot");
    src: url("../fonts/fa-brands-400.eot?#iefix") format("embedded-opentype"),
        url("../fonts/fa-brands-400.woff") format("woff"),
        url("../fonts/fa-brands-400.ttf") format("truetype"),
        url("../fonts/fa-brands-400.svg#brands") format("svg");
        font-weight: normal;
        font-style: normal;
}

@font-face {
    font-family: "logofont";
    src: url("../fonts/logofont.otf") format("opentype");
        font-weight: normal;
        font-style: normal;
}

html, body {
    margin: 0;
    padding: 0;
}

head {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

body {
    display: flex;
    flex-direction: column;
    font-family: Montserrat, sans-serif;
}

.main-header {
    overflow: hidden;
    position: fixed;
    width: 100%;
    background-color: white;
    opacity: 0.95;
    z-index: 1;
    margin: 0 auto 10px auto;
}

.logo {
    width: 150px;
}

.navigation-bar {
    text-align: center;
    display: table;
    margin: 25px auto 0px auto;
}

.navigation-list {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    list-style-type: none;
    margin-bottom: 8px;
}

.navigation-list li {
    display: inline;
}

nav ul li a {
    font-size: 1em;
    text-decoration: none;
    color: black;
    padding: 0 15px;
}

nav ul li a:hover {
    color: #793236;
    font-size: 1.1em;
}

nav ul li a:visited {
    color: #793236;
    font-size: 1.2em;
    font-weight: bold;
}

/* Home section */
.home {
    height: 1200px;
    position: relative;
    overflow: hidden;
}

.home .image {
    background: url(../img/skyline.svg);
    background-repeat: no-repeat;
    position: absolute;
    left: 0;
    top: 0;
    height: 100%;
    width: 300%;
}

.image-slide {
    animation: slideshow 40s linear infinite;
    transform: translate3d(0, 0, 0);
}

@keyframes slideshow {
    0%    { left: 0; }
    100%  { left: -200%; }
}

@keyframes moveSlideshow {  
    100% { 
      -webkit-transform: translateX(-200%);  
    }
}

main {
    margin: 0px auto;
    padding: 0px;
    text-align: center;
}

.section-titles {
    padding: 50px 0 50px 0;
}

/* Arch portfolio section */

.arch {
    width: 1200px;
    text-align: center;
    margin: 0 auto;
}

.thumbnail-list {
    list-style: none;
    padding: 0px;
    margin: 0px;
}

.thumbnail-list li {
    cursor: pointer;
    position: relative;
    border: 1px dotted black;
    border-radius: 20px;
    margin: 10px;
    padding: 10px;
    width: 200px;
    height: 200px;
}

.thumbnail-item:hover {
    background-color: #793236;
}

.back-side .front-side{
    position: absolute;
    backface-visibility: hidden;
}

.back-side {
    text-align: center;
    text-transform: uppercase;
    font-size: 0.80em;
}

.back-side {
    transform: rotateY(180);
}

.thumbnail-image {
    width: 150px;
}

.thumbnail-item {
    display: inline-block;

    border: 1px solid rgb(100%, 100%, 100%);
    border: 1px solid rgba(100%, 100%, 100%, 0.8);
}

/* Websites section */

.websites {
    width: 1200px;
    margin: 0 auto;
    text-align: center;
}

.websites-list {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.websites-item {
    cursor: pointer;
    position: relative;
    display: inline-block;
    border: 1px dotted black;
    margin: 10px;
    padding: 10px;
    width: 350px;
    height: 250px;
    overflow: hidden;
}

.websites-list li a {
    text-decoration: none;
    margin: 0;
    padding: 0;
}

.websites-list li a img {
    width: 100%;
}

/* About section */

.about {
    width: 1200px;
    margin: 0 auto;
    color: white;
    background-color: #793236;
}

.about-content {
    display: flex;
}

.column {
    width: 50%;
    padding: 0 20px;
    text-align: justify;
    text-justify: auto;
}

.h3-about {
    text-align: center;
    font-size: 1em;
    margin-top: 50px;
}

.cv-download {
    display: flex;
    align-content: center;
}

.cv-download a {
    display: flex;
    flex-direction: column;
    text-decoration: none;
    width: 50%;
    padding: 5px 0;
    align-content: flex-end
}

.a-left {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    margin-right: 15px;
}

.a-right {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-left: 15px;
}

.cv-download a span {
    font-size: 0.8em;
    margin-top: 10px;
    color: white;
}

.span-left {
    margin-right: 15px;
}

.cv-download a span:hover {
    text-decoration: underline;
}

.cv-logo {
    width: 30%;
}

/* Contact section */

.contact {
    width: 1200px;
    margin: 0 auto;
    text-align: center;
}

form {
    display: flex;
    flex-direction: column;
}
.name-email {
    display: flex;
    padding: 20px 0;
    margin: 0 auto;
    width: 100%;
}

label {
    display: none;
}

input[type=text] {
    border: 1px solid black;
    padding: 11px 21px;
    width: 50%;
}

#name {
    margin-right: 10px;
}

#email {
    margin-left: 10px;
}

input[type=text]:focus {
    border: 2px solid #793236;
    box-shadow: none;
    outline: 0;
}

textarea {
    width: 100%;
    padding: 11px 21px;
    box-sizing: border-box;
    border: 1px solid black;
    resize: none;
}

textarea:focus {
    border: 2px solid #793236;
    outline: 0;
}

input[type=submit] {
    padding: 10px;
    margin: 15px 0;
    border: 2px solid #793236;
    background-color: none;
    background: none;
    font-weight: bold;
    font-size: 1em;
}

input[type=submit]:hover {
    background-color: #793236;
    color: white;
    cursor: pointer;
}

/* Footer section */

footer {
    width: 100%;
    font-family: brands, sans-serif;
    margin-top: 50px;
    text-align: center;
}

footer ul {
    display: flex;
    list-style-type: none;
    align-items: center;
    align-content: center;
    justify-content: center;
    padding: 0;
    margin-top: 5px;
}

footer ul li {
    padding: 0 18px;
    min-width: 25px;
    max-width: 25px;
}

footer ul li a {
    font-family: brands, sans-serif;
    font-size: 2em;
    color: #000;
    text-decoration: none;
}

.signature {
    font-size: .7em;
    text-align: center;
    margin: 0 auto;
}

.logotype {
    font-family: logofont, Montserrat, sans-serif;
    font-size: 1.4em;
}

.w-logo {
    color: #793236;
}

/*
*
* Media queries
*
*
*/

/* Media query max 426px width */
@media screen and (max-width: 426px) {



    /* Contact */
    .contact {
        width: 100%;
    }
    
    form {
        display: flex;
        flex-direction: column;
    }

    .name-email {
        display: flex;
        flex-direction: column;
        padding: 0;
    }
    
    label {
        display: none;
    }
    
    input[type=text] {
        border: 1px solid black;
        padding: 11px 21px;
        margin: 10px;
    }
    
    #name {
        width: 100%;
    }
    
    #email {
        width: 100%;
    }
    
    input[type=text]:focus {
        border: 2px solid #793236;
        box-shadow: none;
        outline: 0;
    }
    
    textarea {
        width: 100%;
        padding: 11px 21px;
        margin: 10px;
        box-sizing: border-box;
        border: 1px solid black;
        resize: none;
    }
    
    textarea:focus {
        border: 2px solid #793236;
        outline: 0;
    }
    
    input[type=submit] {
        width: 100%;
        padding: 10px;
        margin: 10px;
        border: 2px solid #793236;
        background-color: none;
        background: none;
        font-weight: bold;
        font-size: 1em;
    }
    
    input[type=submit]:hover {
        background-color: #793236;
        color: white;
        cursor: pointer;
    }

    /* footer */

}




/*
*
* Lightbox styles
*
*
*/

html.lb-disable-scrolling {
    overflow: hidden;
    /* Position fixed required for iOS. Just putting overflow: hidden; on the body is not enough. */
    position: fixed;
    height: 100vh;
    width: 100vw;
  }
  
  .lightboxOverlay {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 9999;
    background-color: black;
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
    opacity: 0.8;
    display: none;
  }
  
  .lightbox {
    position: absolute;
    left: 0;
    width: 100%;
    z-index: 10000;
    text-align: center;
    line-height: 0;
    font-weight: normal;
  }
  
  .lightbox .lb-image {
    display: block;
    height: auto;
    max-width: inherit;
    max-height: none;
    border-radius: 3px;
  
    /* Image border */
    border: 4px solid white;
  }
  
  .lightbox a img {
    border: none;
  }
  
  .lb-outerContainer {
    position: relative;
    *zoom: 1;
    width: 250px;
    height: 250px;
    margin: 0 auto;
    border-radius: 4px;
  
    /* Background color behind image.
       This is visible during transitions. */
    background-color: white;
  }
  
  .lb-outerContainer:after {
    content: "";
    display: table;
    clear: both;
  }
  
  .lb-loader {
    position: absolute;
    top: 43%;
    left: 0;
    height: 25%;
    width: 100%;
    text-align: center;
    line-height: 0;
  }
  
  .lb-cancel {
    display: block;
    width: 32px;
    height: 32px;
    margin: 0 auto;
    background: url(img/loading.gif) no-repeat;
  }
  
  .lb-nav {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: 10;
  }
  
  .lb-container > .nav {
    left: 0;
  }
  
  .lb-nav a {
    outline: none;
    background-image: url('data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==');
  }
  
  .lb-prev, .lb-next {
    height: 100%;
    cursor: pointer;
    display: block;
  }
  
  .lb-nav a.lb-prev {
    width: 34%;
    left: 0;
    float: left;
    background: url(img/prev.png) left 48% no-repeat;
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
    opacity: 0;
    -webkit-transition: opacity 0.6s;
    -moz-transition: opacity 0.6s;
    -o-transition: opacity 0.6s;
    transition: opacity 0.6s;
  }
  
  .lb-nav a.lb-prev:hover {
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
    opacity: 1;
  }
  
  .lb-nav a.lb-next {
    width: 64%;
    right: 0;
    float: right;
    background: url(img/next.png) right 48% no-repeat;
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
    opacity: 0;
    -webkit-transition: opacity 0.6s;
    -moz-transition: opacity 0.6s;
    -o-transition: opacity 0.6s;
    transition: opacity 0.6s;
  }
  
  .lb-nav a.lb-next:hover {
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
    opacity: 1;
  }
  
  .lb-dataContainer {
    margin: 0 auto;
    padding-top: 5px;
    *zoom: 1;
    width: 100%;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
  }
  
  .lb-dataContainer:after {
    content: "";
    display: table;
    clear: both;
  }
  
  .lb-data {
    padding: 0 4px;
    color: #ccc;
  }
  
  .lb-data .lb-details {
    width: 85%;
    float: left;
    text-align: left;
    line-height: 1.1em;
  }
  
  .lb-data .lb-caption {
    font-size: 13px;
    font-weight: bold;
    line-height: 1em;
  }
  
  .lb-data .lb-caption a {
    color: #4ae;
  }
  
  .lb-data .lb-number {
    display: block;
    clear: left;
    padding-bottom: 1em;
    font-size: 12px;
    color: #999999;
  }
  
  .lb-data .lb-close {
    display: block;
    float: right;
    width: 30px;
    height: 30px;
    background: url(img/close.png) top right no-repeat;
    text-align: right;
    outline: none;
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
    opacity: 0.7;
    -webkit-transition: opacity 0.2s;
    -moz-transition: opacity 0.2s;
    -o-transition: opacity 0.2s;
    transition: opacity 0.2s;
  }
  
  .lb-data .lb-close:hover {
    cursor: pointer;
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
    opacity: 1;
  }
  

